--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://sivakumar51.github.io/GitHubProfileFinder",
+ "homepage": "https://sivakumar51.github.io/sivakumar-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
